fix commit msg overflow to the end of screen.

--- a/style.css
+++ b/style.css
@@ -39,6 +39,6 @@ footer {
 }
 
 .commit-msg {
-    white-space: pre;
+    white-space: pre-wrap;
     margin: 0;
 }
